--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,8 @@ uvicorn==0.27.1
 python-multipart==0.0.9
 aiofiles==23.2.1
 moviepy==1.0.3
+langchain==0.1.11
+langchain-google-genai==2.1.3
+python-dotenv==1.0.1
+faiss-cpu==1.8.0
+langchain-community==0.1.11
