--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,9 @@ uvicorn==0.27.1
 python-multipart==0.0.9
 aiofiles==23.2.1
 moviepy==1.0.3
+langchain>=0.1.0
+langchain-google-genai>=0.0.6
+python-dotenv>=1.0.0
+faiss-cpu>=1.7.0
+langchain-community>=0.0.35
+numpy<2.0
