--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,29 @@
+# Web Framework
 fastapi==0.110.0
 uvicorn==0.27.1
 python-multipart==0.0.9
 aiofiles==23.2.1
-moviepy==1.0.3
+pydantic>=2.0.0
+
+# AI and Machine Learning
+torch>=2.0.0
+transformers>=4.36.0
+google-generativeai>=0.3.0
 langchain>=0.1.0
 langchain-google-genai>=0.0.6
-python-dotenv>=1.0.0
-faiss-cpu>=1.7.0
 langchain-community>=0.0.35
+faiss-cpu>=1.7.0
+
+# Image Processing
+Pillow>=10.0.0
+pytesseract>=0.3.10
+
+# Audio/Video Processing
+moviepy==1.0.3
+soundfile>=0.12.1
+
+# Utilities
+python-dotenv>=1.0.0
 numpy<2.0
 langdetect>=1.0.9
 
